--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -255,6 +255,7 @@ components:
           HEAT: 1
   #################### [TANK] ###################
   tank_chemical_fuel:
+    name: Chemical Fuel Tank
     type: tank
     density: 4
     durability: 1
@@ -263,6 +264,7 @@ components:
       tank:
         stores: chemical_fuel
   tank_inert_fluid:
+    name: Inert Fluid Tank
     type: tank
     density: 5
     durability: 1
@@ -271,6 +273,7 @@ components:
       tank:
         stores: inert_fluid
   tank_nuclear_bombs:
+    name: Nuclear Bomb Tank
     type: tank
     density: 10
     durability: 1
@@ -279,6 +282,7 @@ components:
       tank:
         stores: nuclear_bombs
   tank_fissile_pellets:
+    name: Fissile Pellet Tank
     type: tank
     density: 10
     durability: 1
@@ -287,6 +291,7 @@ components:
       tank:
         stores: fissile_pellets
   tank_dissolved_fissiles:
+    name: Dissolved Fissiles Tank
     type: tank
     density: 12
     durability: 1
@@ -295,6 +300,7 @@ components:
       tank:
         stores: dissolved_fissiles
   tank_d3he:
+    name: D-3He Tank
     type: tank
     density: 3
     durability: 1
