update weapon energies

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -652,6 +652,7 @@ components:
         power: 7
         power_upgrade: 7
   laser:
+    name: "Laser"
     type: weapon_direct
     density: 3
     durability: 3
@@ -663,7 +664,7 @@ components:
           per_volume: 3
       weapon_direct:
         active:
-          ENERGY: -5
+          ENERGY: -0.025 # 1/40
         range:
           precision_targeting: 4
           gauranteed_hit: 7
@@ -686,7 +687,7 @@ components:
           per_volume: 2
       weapon_direct:
         active:
-          ENERGY: -5
+          ENERGY: -0.033333 # 1/30
         range:
           precision_targeting: 2
           gauranteed_hit: 4
@@ -714,7 +715,7 @@ components:
         launch_method: vls
         size: light
         active:
-          ENERGY: -1
+          ENERGY: -0.033333 # 1/30
     __incomplete: 1
   light_magazine:
     type: weapon_guided
