add muzzle velocity multipliers

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -752,6 +752,7 @@ components:
       weapon_guided:
         launch_method: magazine
         size: light
+        muzzle_velocity_multiplier: 4
         active:
           ENERGY: 0.0277777 # 1/36
   heavy_vls:
@@ -794,6 +795,7 @@ components:
           per_volume: 1
       weapon_guided:
         launch_method: magazine
+        muzzle_velocity_multiplier: 1
         size: heavy
         active:
           ENERGY: 0.0625 # 1/16
