give the construction equipment a category

--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -901,6 +901,7 @@ components:
 
   construction_equipment:
     name: Construction Equipment
+    type: utility
     density: 5
     durability: 24
     price: 5
