--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -57,7 +57,7 @@ components:
     type: "engine"
     density: 1
     durability: 3
-    price: 0.5
+    price: "0.5*volume"
     modules:
       crew:
         strategic:
@@ -66,7 +66,7 @@ components:
       engine:
         thrust: 275
         fuel:
-          "chemical_fuel": 10
+          chemical_fuel: "10*volume"
         works_in_atmo: true
         landing_bad_idea: false
   thermal_rocket:
