--- a/junctspace_dump.yaml
+++ b/junctspace_dump.yaml
@@ -628,7 +628,7 @@ components:
           per_volume: 2
       weapon_direct:
         active:
-          ENERGY: -4
+          ENERGY: -0.025 # 1/40
         range:
           precision_targeting: 1
           gauranteed_hit: 2
@@ -652,7 +652,7 @@ components:
           per_volume: 3
       weapon_direct:
         active:
-          ENERGY: -0.025 # 1/40
+          ENERGY: -0.0333333 # 1/30
         range:
           precision_targeting: 4
           gauranteed_hit: 7
@@ -676,7 +676,7 @@ components:
           per_volume: 2
       weapon_direct:
         active:
-          ENERGY: -0.033333 # 1/30
+          ENERGY: -0.0333333 # 1/30
         range:
           precision_targeting: 2
           gauranteed_hit: 4
