--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,9 @@
 stages:
   - validate
 
-validate-yaml:
-  stage: validate
-  image: python:3
-  script:
-    - pip install pyyaml
-    - python3 compile.py
+# validate-yaml:
+ # stage: validate
+ # image: python:3
+  #:script:
+  #  - pip install pyyaml
+   # - python3 compile.py
